# GOLF_ESP32

main_code/: CMakeLists.txt  sdkconfig  sdkconfig.old
main_code/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c
main_code/main/inc/: i2c_dev.h  ina_219.h  ina_219_handler.h  mqtt_connect.h  runStats.h  sys_config.h  twai_connect.h  wifi_connect.h  ws_server.h
main_code/main/src/: i2c_dev.c  ina_219.c  ina_219_handler.c  mqtt_connect.c  runStats.c  twai_connect.c  wifi_connect.c  ws_server.c
main_code/main/webpage/: control.html
main_code/test/: client.py
test_can/: sdkconfig
test_can/main/: CMakeLists.txt  Kconfig.projbuild  test_twai.c
test_can_master/: CMakeLists.txt  sdkconfig  sdkconfig.old
test_can_master/main/: twai_network_example_master_main.c
test_can_slave/: CMakeLists.txt  sdkconfig  sdkconfig.old
test_can_slave/main/: twai_network_example_slave_main.c
test_ina/main/: CMakeLists.txt  main.c
test_ina/main/src/: i2c_dev.c  ina219.c
test_mqtt/: MQTTController.py  sdkconfig
test_mqtt/main/: CMakeLists.txt  app_main.c
test_mqtt/main/inc/: mqtt_connect.h  sys_config.h  wifi_connect.h
test_mqtt/main/src/: mqtt_connect.c  wifi_connect.c
test_sd/: fixsd_twai.txt  sdkconfig.old
test_sd/main/: sd_card_example_main.c
test_websocket/: CMakeLists.txt  sdkconfig  sdkconfig.old
test_websocket/main/: CMakeLists.txt
test_websocket/main/inc/: wifi.h
test_websocket/main/src/: wifi.c  ws_echo_server.c
test_websocket/main/webpage/: control.html
